crates/atlas-runtime/tests/corpus/pass/modules/basic_import/main.atl
// Test: basic import of a single function
import { add } from "./math";

let result: number = add(10, 20);
print(result);
