crates/atlas-runtime/tests/corpus/fail/modules/circular_import/a.atl
// a.atlas - imports from b (creates cycle)
import { b_val } from "./b";

export let a_val: number = b_val + 1;
